Update 'backend-tests-go-tixvjhze' component image to: quay.io/rhtap_qe/backend-tests-go-tixvjhze:0fdf966aeaa5dc439e7a73d82ff0e6286c3a3766@sha256:a74d98555e1ad35018e170086625b641f259b5b2fff3fb34223563a989df4fb5

--- a/components/backend-tests-go-tixvjhze/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-tixvjhze/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-tixvjhze
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-tixvjhze:0fdf966aeaa5dc439e7a73d82ff0e6286c3a3766@sha256:a74d98555e1ad35018e170086625b641f259b5b2fff3fb34223563a989df4fb5
+          name: container-image
